# FalcomTravel

./: .gitignore  LICENSE  README.md  pyproject.toml
src/falcomtravel/: __init__.py  compute.py  diagnose.py  helpers.py  matrix.py  modes.py
src/falcomtravel/backends/: __init__.py  base.py  euclidean.py  graph.py  osmnx.py  r5r.py
src/falcomtravel/backends/_r/: ttm.R
tests/: test_osmnx.py  test_smoke.py
travel-time-matrix/: OD-data.ipynb  candidates.ipynb  main.ipynb
travel-time-matrix/travel_time/: __init__.py  plot.py  r_wrapper.py  traveltime.py  ttm.R
